[package]
name = "mpl-auction"
version = "0.0.2"
description = "Solana Auction Program"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/florida"
license = "AGPL-3.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
solana-program = "1.10"
spl-token = { version="3.2", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.10"
solana-sdk = "1.10"
mpl-testing-utils = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
