[package]
name = "mpl-metaplex"
version = "0.1.0"
description = "Metaplex"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/florida"
license = "AGPL-3.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
mpl-auction = { version= "0.1", features = [ "no-entrypoint" ]}
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
solana-program = "1.10"
spl-token = { version="3.2", features = [ "no-entrypoint" ] }
mpl-token-vault = { version = "0.2.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.4", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.1"
spl-associated-token-account = "1.0.5"

[dev-dependencies]
solana-sdk = "1.10"
solana-program-test = "1.10"

[lib]
crate-type = ["cdylib", "lib"]
